objects/ASI_TH_CRM_PaymentRequestLineItem__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SG CRM P2
Payment request line items require Finance verify. This checkbox identify if the line item is verified.</description>
        <inlineHelpText>Show that if Finance verified this item.</inlineHelpText>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Volume_9L__c</fullName>
        <label>Volume (9L)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Volume_Base__c</fullName>
        <label>Volume Base</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>By Sub-Brand</fullName>
                </value>
                <value>
                    <fullName>By Grade</fullName>
                </value>
                <value>
                    <fullName>By Total</fullName>
                </value>
                <value>
                    <fullName>By Category</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Withholding_Tax__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Withholding Tax Code</label>
        <referenceTo>ASI_MFM_Tax_Code__c</referenceTo>
        <relationshipLabel>Payment Request Line Items</relationshipLabel>
        <relationshipName>Payment_Request_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_COA__c</fullName>
        <label>COA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fund - Advance</fullName>
                </value>
                <value>
                    <fullName>Fund - Cash</fullName>
                </value>
                <value>
                    <fullName>Fund - FOC</fullName>
                </value>
                <value>
                    <fullName>Activity - Cash</fullName>
                </value>
                <value>
                    <fullName>Activity - FOC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Invoice_No__c</fullName>
        <label>Invoice No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Owner__c</fullName>
        <formula>ASI_TH_CRM_Payment_Request__r.Owner:User.FirstName + &apos; &apos; +  ASI_TH_CRM_Payment_Request__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_PRD_EXID__c</fullName>
        <externalId>true</externalId>
        <label>Payment Request Detail External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Payment_Details__c</fullName>
        <label>Payment Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Payment_Request__c</fullName>
        <label>Payment Request</label>
        <referenceTo>ASI_TH_CRM_PaymentRequest__c</referenceTo>
        <relationshipLabel>Payment Request Line Items</relationshipLabel>
        <relationshipName>ASI_TH_CRM_PRLI_PaymentRequest</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Subbrand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Payment Request Line Items</relationshipLabel>
        <relationshipName>ASI_TH_CRM_PRLI_SubBrand</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_UnitCost__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Payment Request Line Item</label>
    <nameField>
        <displayFormat>{YY}{MM}-{0000}</displayFormat>
        <label>Payment Request Ref.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Request Line Items</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Payment_Request_Detail_BRSF</fullName>
        <active>true</active>
        <label>ASI CRM CN Payment Request Detail (BRSF)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_Payment_Request_Detail_Other</fullName>
        <active>true</active>
        <label>ASI CRM CN Payment Request Detail (Other)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_Payment_Request_Detail_PSF</fullName>
        <active>true</active>
        <label>ASI CRM CN Payment Request Detail (PSF)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_Payment_Request_Detail_VEC</fullName>
        <active>true</active>
        <label>ASI CRM CN Payment Request Detail (VEC)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MY_Payment_Request_Detail</fullName>
        <active>true</active>
        <label>ASI CRM MY Payment Request Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Payment_Request_Detail</fullName>
        <active>true</active>
        <label>ASI CRM SG Payment Request Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TH_CRM_Payment_Request_Detail</fullName>
        <active>true</active>
        <label>ASI TH CRM Payment Request Detail</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_CN_PSF_Period_Checking</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ASI_CRM_CN_Period_Start__c &gt;  ASI_CRM_CN_Period_End__c ,  RecordType.DeveloperName =&apos;ASI_CRM_CN_Payment_Request_Detail_PSF&apos;)</errorConditionFormula>
        <errorMessage>Please select correct PSF period</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_CN_Validate_PSF_Period</fullName>
        <active>true</active>
        <errorConditionFormula>ASI_CRM_CN_Period_Start__c  &gt; ASI_CRM_CN_Period_End__c  ||
 ASI_CRM_CN_Period_Start__c   &lt;  ASI_TH_CRM_Payment_Request__r.ASI_CRM_CN_PO_Start_Date__c ||
ASI_CRM_CN_Period_End__c  &gt; ASI_TH_CRM_Payment_Request__r.ASI_CRM_CN_PO_End_Date__c</errorConditionFormula>
        <errorDisplayField>ASI_CRM_CN_AC_Code__c</errorDisplayField>
        <errorMessage>PSF period must be within PO Date Range</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_MY_PRLine_BlankChk</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
$User.BypassVR__c != TRUE,
CONTAINS($RecordType.DeveloperName, &apos;ASI_CRM_MY&apos;), 
OR(
ISBLANK(ASI_CRM_SetupCode__c),
ISBLANK(ASI_CRM_SKU__c),
ISBLANK(ASI_CRM_CN_Actual_Vol__c),
ISBLANK(ASI_TH_CRM_Amount__c)
) 
)</errorConditionFormula>
        <errorMessage>The following fields must be filled: 
- Setup Code, SKU, Actual Vol (Std. Bottle), Amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_SG_BottleIncentive_BlockNegative</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
  RecordType.DeveloperName = &apos;ASI_CRM_SG_Payment_Request_Detail&apos;,
  ASI_TH_CRM_Payment_Request__r.ASI_CRM_System_Generated__c,
  ISPICKVAL(ASI_CRM_SG_Type__c , &apos;Bottle Incentive&apos;),
  OR (
    ISBLANK(ASI_CRM_Adjusted_Amount__c) ,
    ASI_CRM_Adjusted_Amount__c &lt; 0
  )
)</errorConditionFormula>
        <errorMessage>Adjusted Amount must be greater than or equal to $0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_SG_BottleIncentive_Remarks</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
  RecordType.DeveloperName = &apos;ASI_CRM_SG_Payment_Request_Detail&apos;,
  ASI_TH_CRM_Payment_Request__r.ASI_CRM_System_Generated__c,
  ISPICKVAL(ASI_CRM_SG_Type__c , &apos;Bottle Incentive&apos;),
  ASI_TH_CRM_Amount__c != ASI_CRM_Adjusted_Amount__c,
  ISBLANK(ASI_CRM_Adjustment_Remark__c) 
)</errorConditionFormula>
        <errorMessage>Please input Remark if you have adjustment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_SG_PaymentCOALocalChannelCheck</fullName>
        <active>false</active>
        <errorConditionFormula>AND (
 CONTAINS( RecordType.DeveloperName , &quot;ASI_CRM_SG&quot;),
 ISBLANK( TEXT(ASI_TH_CRM_Payment_Request__r.ASI_CRM_CN_OutletWS__r.ASI_CRM_SG_Local_Channel__c)),
 ASI_CRM_SG_JDE_Is_Append_Local_Channel__c 
)</errorConditionFormula>
        <errorMessage>The Outlet of this payment need to have Local Channel for this expense type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_SG_WSBackRebate_BlockGiveMore</fullName>
        <active>false</active>
        <errorConditionFormula>AND (
  RecordType.DeveloperName = &apos;ASI_CRM_SG_Payment_Request_Detail&apos;,
  ASI_TH_CRM_Payment_Request__r.ASI_CRM_System_Generated__c, 
  !ISBLANK(ASI_TH_CRM_Payment_Request__r.ASI_TH_CRM_Contract__c),
  ISPICKVAL(ASI_CRM_SG_Type__c , &apos;Back Rebates&apos;),
  ASI_TH_CRM_Amount__c &lt; ASI_CRM_Adjusted_Amount__c
)</errorConditionFormula>
        <errorMessage>Adjusted Amount must be less than or equal to the computed amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_SG_WSBackRebate_BlockNegative</fullName>
        <active>false</active>
        <errorConditionFormula>AND (
  RecordType.DeveloperName = &apos;ASI_CRM_SG_Payment_Request_Detail&apos;,
  !ISBLANK(ASI_TH_CRM_Payment_Request__r.ASI_TH_CRM_Contract__c),
  ISPICKVAL(ASI_CRM_SG_Type__c , &apos;Back Rebates&apos;),
  OR (
    ISBLANK(ASI_CRM_Adjusted_Amount__c) ,
    ASI_CRM_Adjusted_Amount__c &lt; 0
  )
)</errorConditionFormula>
        <errorMessage>Adjusted Amount must be greater than or equal to $0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_SG_WSBackRebate_Remarks</fullName>
        <active>false</active>
        <errorConditionFormula>AND (
  RecordType.DeveloperName = &apos;ASI_CRM_SG_Payment_Request_Detail&apos;,
  ASI_TH_CRM_Payment_Request__r.ASI_CRM_System_Generated__c, 
  !ISBLANK(ASI_TH_CRM_Payment_Request__r.ASI_TH_CRM_Contract__c),
  ISPICKVAL(ASI_CRM_SG_Type__c , &apos;Back Rebates&apos;),
  ASI_TH_CRM_Amount__c != ASI_CRM_Adjusted_Amount__c,
  ISBLANK(ASI_CRM_Adjustment_Remark__c) 
)</errorConditionFormula>
        <errorMessage>Please input Remark if you have adjustment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_TH_CRM_ValidateUnitCost</fullName>
        <active>true</active>
        <errorConditionFormula>AND(AND(TEXT(ASI_TH_CRM_COA__c)&lt;&gt;&apos;Fund - FOC&apos;,TEXT(ASI_TH_CRM_COA__c)&lt;&gt;&apos;Activity - FOC&apos;), OR(ISBLANK(ASI_TH_CRM_UnitCost__c) ,ISNULL(ASI_TH_CRM_UnitCost__c)), RecordType.DeveloperName=&apos;ASI_TH_CRM_Payment_Request_Detail&apos; )</errorConditionFormula>
        <errorDisplayField>ASI_TH_CRM_UnitCost__c</errorDisplayField>
        <errorMessage>Please enter Unit Cost.</errorMessage>
    </validationRules>
</CustomObject>